WIP: convert LocRibWriter to DOM APIs
This is a preliminary conversion, pushing down the changes.

// FIXME: track down UT failures
// FIXME: minimize RIBSupport methods
// FIXME: RIBSupport should lose most of its args

Change-Id: If6b22adf8f9a15c744ed873a5e114a251023c7a8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
Signed-off-by: Claudio D. Gasparini <claudio.gasparini@pantheon.tech>